updated swagger documentation, changed Middleware, redesigned GET method for user, now it returns new tokens if they were created
