# Auth/handlers/userUpdateHandler.go
@@ -23,6 +23,8 @@ import (
 // @Failure 400 {object} models.ErrResponce
 // @Failure 404 {object} models.ErrResponce
 // @Failure 500 {object} models.ErrResponce
+// @Security accessToken
+// @Security refreshRefresh
 // @Router /user/{guid}/update [put]
 func UserUpdateHandler(ctx *gin.Context) {
 	var activeUser models.User
